--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -127,7 +127,7 @@
 								success : function(result) {
 									if (result.failed) {
 										displayError(
-												"Failed in verifying the soltion with",
+												"Failed in verifying the solution with",
 												result.failureMSG)
 									} else {
 										$("#result")
